--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.7",
+    "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "i18next": "^23.15.1",
