--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-input-mask-next": "^3.0.0-alpha.12",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "react-text-mask": "^5.5.0",
     "recharts": "^2.12.7",
