--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "i18next": "^23.15.1",
     "modern-normalize": "^3.0.1",
