--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.2",
-    "react-scripts": "^5.0.1",
     "react-text-mask": "^5.5.0",
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
@@ -39,12 +38,10 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "deploy": "npm run build && gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint:js": "eslint src/**/*.{js,jsx}"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -66,6 +63,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "eslint-plugin-react": "^7.36.0",
     "gh-pages": "^6.1.1",
     "globals": "^15.9.0"
