--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "i18next": "^23.15.1",
+    "js-cookie": "^3.0.5",
     "modern-normalize": "^3.0.1",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
