--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
