--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "aqua-track",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://goitacademy.github.io/",
