--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "aqua-track",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://goitacademy.github.io/",
@@ -43,12 +43,10 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "deploy": "npm run build && gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint:js": "eslint src/**/*.{js,jsx}"
+    "start": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -70,6 +68,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "eslint-plugin-react": "^7.36.0",
     "gh-pages": "^6.1.1",
     "globals": "^15.9.0"
