--- a/package.json
+++ b/package.json
@@ -39,16 +39,16 @@
     "redux-persist": "^6.0.0",
     "text-mask-addons": "^3.8.0",
     "typewriter-effect": "^2.21.0",
+    "vercel": "^37.5.4",
     "web-vitals": "^2.1.3",
     "yup": "^1.4.0"
   },
-"scripts": {
+  "scripts": {
     "start": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
